# healthyselfjournal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  examinedlifejournal.py  pyproject.toml
docs/conversations/: 250917a_journaling_app_ui_technical_decisions.md  250918a_keyboard_library_evaluation_for_esc_handling.md  250918a_naming_wellspoken_journal.md  250918b_local_llm_selection_for_journaling_app.md  251017a_safeguarding_crisis_resources_research.md  251018a_crisis_resources_cli_implementation_design.md
docs/planning/: 250917a_voice_journaling_app_v1.md  250917b_switchable_audio_backends.md  250917c_publish_to_pypi.md  250917d_project_rename.md  250918a_core_refactors_and_architecture_improvements.md  250918b_web_interface_planning.md  250919a_web_interface_robustness_alignment.md  250919b_transcription_resilience_detect_and_suggest.md  250919c_pywebview_desktop_bundling_plan.md  250919d_desktop_init_wizard_and_minimal_settings_ui.md  251017c_foundational_setup_portability_release_plan.md  251017d_global_crisis_resources_catalogue.md  251018b_journal_cli_private_cloud_aliases_and_auto_private_preflight.md
docs/reference/: ARCHITECTURE.md  AUDIO_SPEECH_GENERATION.md  (+34 more)
examinedlifejournal/: __init__.py  audio.py  cli.py  cli_init.py  cli_journal.py  cli_merge.py  cli_reconcile.py  cli_summaries.py  config.py  llm.py  question_bank.py  session.py  storage.py  transcription.py  tts.py
healthyselfjournal/: audio.py  cli.py  cli_desktop.py  cli_diagnose.py  cli_fix.py  cli_init.py  cli_init_app.py  cli_journal.py  cli_journal_cli.py  cli_mic_check.py  cli_reconcile.py  cli_session.py  cli_web.py  config.py  llm.py  model_manager.py  session.py  transcription.py  tts.py
scripts/: release.sh
tests/: test_llm_local.py  test_pending.py  test_session.py  test_storage.py  test_transcription.py  test_tts.py  test_utils.py  test_web_app.py
(+29 files in other folders)
