[project]
name = "examinedlifejournal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gjdutils",
    "faster-whisper",
    "rich",
    "typer",
]

[tool.uv.sources]
gjdutils = { path = "./gjdutils", editable = true }
